--- a/src/mail/templates/information.hbs
+++ b/src/mail/templates/information.hbs
@@ -1,7 +1,7 @@
 <p>Hello,</p>
 <p>Please click here to join class</p>
 <p>
-  <a href="{{ url }}">Confirm</a>
+  <a href='{{url}}'>Confirm</a>
 </p>
 
 <p>If you did not request this email you can safely ignore it.</p>
